Fix: Data exploration visualisations have an odd top margin on iOS

--- a/features/polyExplorer/src/screens/dataExploration/dataExploration.css
+++ b/features/polyExplorer/src/screens/dataExploration/dataExploration.css
@@ -141,6 +141,7 @@
 
 .data-exploration .static-content .bubble-chart svg,
 .data-exploration .jurisdiction-tree-container .jurisdiction-tree svg {
+    display: block;
     width: 100%;
     height: 100%;
 }
